fix: clippy positioning

--- a/src/extensions/community_extensions/_clippyPoint-paperclip.scss
+++ b/src/extensions/community_extensions/_clippyPoint-paperclip.scss
@@ -5,23 +5,26 @@ $_desc: "ClippyPoints Awarded:  ";
 
 //Clippy Point Flair styling - Comments
 
-$_entry-margin: -3px;
 $_collapse-width: 22px;
-
 $_clippy-height: 50px;
-$_clippy-width: 26px;
+// $_clippy-width: 26px;
+$_clippy-width: 35px;
 $_arrow-width: 15px;
-$_left-pad: 7.5px;
-$_arrow-margin-left: 10px;
-// $_margin: $_arrow-width + $_clippy-width + $_left-pad + $_arrow-margin-left -
-// 5px;
+$_arrow-margin-left: 8.5px;
+$_arrow-margin-right: 2px;
+$_clippy-start: $_collapse-width + $_arrow-margin-left + $_arrow-width +
+  $_arrow-margin-right;
+$_comment-start: $_clippy-start - $_arrow-margin-left + $_clippy-width +
+  $_arrow-margin-right;
 
-$_margin: $_entry-margin + $_collapse-width + $_arrow-width + $_clippy-width +
-  $_left-pad;
+.arrow {
+  margin-left: $_arrow-margin-left;
+  margin-right: $_arrow-margin-right;
+}
 
 .commentarea {
   .entry {
-    margin-left: $_margin;
+    margin-left: $_comment-start;
   }
 
   .flair- {
@@ -30,10 +33,12 @@ $_margin: $_entry-margin + $_collapse-width + $_arrow-width + $_clippy-width +
       border: none;
       background-image: v.getImage("clippyflair");
       background-position: center;
+      background-repeat: no-repeat;
       position: absolute;
+      padding: 0;
       width: $_clippy-width;
       height: $_clippy-height;
-      left: ($_collapse-width + $_arrow-width + $_left-pad);
+      left: $_clippy-start;
       border-radius: v.$radius;
       @include v.theme("color", v.$primary);
       text-shadow: 0px 1px 0px #333333;
@@ -41,7 +46,7 @@ $_margin: $_entry-margin + $_collapse-width + $_arrow-width + $_clippy-width +
       font-weight: bold;
       text-align: center;
       line-height: $_clippy-height;
-      margin-right: 0;
+      margin: 0;
       &::after {
         content: $_desc attr(title);
         position: absolute;
@@ -73,7 +78,7 @@ $_margin: $_entry-margin + $_collapse-width + $_arrow-width + $_clippy-width +
   }
 
   form.usertext.cloneable.warn-on-unload {
-    margin-left: $_margin - 24px;
+    margin-left: $_comment-start - 24px;
   }
 }
 
